# weather_api

./: Cargo.toml
src/: main.rs  weather.rs
