[package]
name = "weatherAPI"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
structopt="0.3.15"
exitfailure = "0.5.1"
reqwest = {version = "0.10.4", features=["json"]}
serde =  "1.0.14"
serde_json ="1.0.56"
serde_derive="1.0.114"
tokio = { version = "0.2.22", features = ["full"] }
